[metadata]
name = PlexTraktSync
version = 0.7.22
author = Elan Ruusamäe
author_email = glen@pld-linux.org
description = Plex-Trakt-Sync is a two-way-sync between trakt.tv and Plex Media Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Taxel/PlexTraktSync
project_urls =
    Bug Tracker = https://github.com/Taxel/PlexTraktSync/issues
classifiers =
    # See: https://pypi.python.org/pypi?:action=list_classifiers
    Environment :: Console
    # List of python versions and their support status:
    # https://en.wikipedia.org/wiki/CPython#Version_history
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = plex_trakt_sync
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests

[requirements-files]
install_requires = requirements.txt
